# XZram

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  xzram.install
.github/workflows/: ci.yml
crates/xzram/: Cargo.toml
crates/xzram-cli/: Cargo.toml
crates/xzram-cli/src/: args.rs  dbus_client.rs  main.rs  print.rs  privileged.rs  snapshot_ops.rs
crates/xzram-cli/src/commands/: apply_rollback.rs  defaults.rs  mod.rs  read.rs  snapshot.rs  swap.rs  swapfile.rs  sysctl.rs  zram.rs
crates/xzram-cli/tests/: smoke.rs
crates/xzram-helper/: Cargo.toml
crates/xzram-helper/src/: main.rs
crates/xzram-helper/tests/: smoke.rs
crates/xzram/src/: apply.rs  checks.rs  config.rs  detect.rs  doctor.rs  error.rs  lib.rs  migrate.rs  recommend.rs  snapshot.rs  status.rs  swap_partition.rs  swapfile_btrfs.rs  sysctl.rs  validation.rs
crates/xzram/src/apply/: commands.rs  engine.rs  mod.rs  pending.rs  types.rs
crates/xzram/src/backend/: mod.rs  swapfile.rs  zram_generator.rs
crates/xzram/src/recommend/: engine.rs  mod.rs  overflow.rs  profile.rs  staging.rs  types.rs
crates/xzram/src/snapshot/: create.rs  index.rs  mod.rs  paths.rs  restore.rs  types.rs
crates/xzramd/: Cargo.toml
crates/xzramd/src/: dbus.rs  main.rs  privileged.rs
crates/xzramd/src/dbus/: auth.rs  mod.rs  serve.rs  util.rs
data/: io.github.XZram.conf  io.github.XZram.desktop  io.github.XZram.metainfo.xml  io.github.XZram.service  io.github.xzram.policy
data/bash-completion/: xzram
data/dbus-1/system-services/: io.github.XZram1.service
debian/: changelog  control  copyright  postinst  prerm  rules
docs/: AUDIT.md  DEV-ENV.md  FLATPAK.md  GUI-PHASE2.md  RECOMMENDATIONS.md  SCOPE.md  SNAPSHOTS.md
flatpak/: io.github.XZram.yml
gui/: CMakeLists.txt
gui/xzram-qt/: CMakeLists.txt  clifallback.cpp  clifallback.h  dbusclient.cpp  dbusclient.h  formatutils.cpp  formatutils.h  jsonloader.cpp  jsonloader.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  xzramcli.cpp  xzramcli.h
gui/xzram-qt/widgets/: dashboardwidget.cpp  dashboardwidget.h  doctorwidget.cpp  doctorwidget.h  pendingbanner.cpp  pendingbanner.h  recommendeddefaultsdialog.cpp  recommendeddefaultsdialog.h  recommendeddefaultsui.cpp  recommendeddefaultsui.h  settingswidget.cpp  settingswidget.h  snapshotwidget.cpp  snapshotwidget.h  swapfilewidget.cpp  swapfilewidget.h  swapfilewidget_btrfs.cpp  sysctlwidget.cpp  sysctlwidget.h  utilitieswidget.cpp  utilitieswidget.h  zramwidget.cpp  zramwidget.h
packaging/: xzram.spec
scripts/: check-loc.sh  ci-debian-package.sh  ci-distro-smoke.sh  polkit-smoke-checklist.sh  reinstall-system.sh  uninstall-system.sh
