[package]
name = "xzram-cli"
description = "CLI for cross-distro Linux swap management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "xzram"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xzram = { path = "../xzram" }
zbus = { version = "5", features = ["tokio"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
