[package]
name = "xzram"
description = "Cross-distro Linux swap management library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json = "1"
