[package]
name = "xzramd"
description = "D-Bus daemon for XZram swap management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "xzramd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
xzram = { path = "../xzram" }
zbus = { version = "5", features = ["tokio"] }
zbus_polkit = "5"

[dev-dependencies]
zbus = { version = "5", features = ["tokio"] }
